# ml-rust

./: .gitignore  Cargo.toml  README.md  docker-compose.yml
ingest-into-db/: .gitignore  Cargo.toml
ingest-into-db/src/: main.rs  name_data.rs
ml-playground/: Cargo.toml
ml-playground/src/: main.rs  perceptron.rs
ml-predict-gender/: Cargo.toml
ml-predict-gender/src/: main.rs  models.rs  trainer.rs
